--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,9 @@ RewriteBase /
     Deny from all
 </Files>
 
+# Redirect users URL to customers
+RewriteRule ^admin/users/?$ /admin/customers [R=301,L]
+
 # Admin routing rules
 RewriteCond %{REQUEST_URI} ^/admin/?$
 RewriteRule ^admin/?$ admin/index.php [L]
