Upload database & fixing connection db errors

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,6 +1,24 @@
-FROM php:8.0-apache
-RUN docker-php-ext-install mysqli
-RUN docker-php-ext-install pdo_mysql
+FROM php:8.2-apache
+
+# Set timezone
+ENV TZ=Europe/Helsinki
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+# Install PHP extensions
+RUN docker-php-ext-install mysqli pdo pdo_mysql
+
+# Enable Apache modules
 RUN a2enmod rewrite
-#copy php.ini 
+
+# Set working directory
+WORKDIR /var/www/html
+
+# Set permissions
+RUN chown -R www-data:www-data /var/www/html && \
+    chmod -R 755 /var/www/html
+
+# Configure PHP
 COPY ./php.ini /usr/local/etc/php/
+
+# Start Apache
+CMD ["apache2-foreground"]
