--- a/database/php.ini
+++ b/database/php.ini
@@ -1,5 +1,37 @@
-upload_max_filesize=64M
-post_max_size=64M
-max_execution_time=100
-memory_limit=128M
-date.timezone=Europe/Helsinki
+[PHP]
+; Basic Settings
+memory_limit = 256M
+max_execution_time = 300
+post_max_size = 64M
+upload_max_filesize = 64M
+
+; Error Handling
+error_reporting = E_ALL
+display_errors = On
+log_errors = On
+error_log = /var/log/php/error.log
+
+; Date and Time
+date.timezone = Europe/Helsinki
+
+; Session
+session.cookie_httponly = 1
+session.use_only_cookies = 1
+
+; MySQL
+mysql.default_socket = /var/run/mysqld/mysqld.sock
+mysqli.default_socket = /var/run/mysqld/mysqld.sock
+
+; Security
+expose_php = Off
+allow_url_fopen = On
+allow_url_include = Off
+disable_functions = exec,passthru,shell_exec,system,proc_open,popen,curl_multi_exec,parse_ini_file,show_source
+
+; Performance
+opcache.enable = 1
+opcache.memory_consumption = 128
+opcache.interned_strings_buffer = 8
+opcache.max_accelerated_files = 4000
+opcache.validate_timestamps = 1
+opcache.revalidate_freq = 60
