Connect database,fix errors on admin site and toys page

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -10,6 +10,11 @@ RUN docker-php-ext-install mysqli pdo pdo_mysql
 # Enable Apache modules
 RUN a2enmod rewrite
 
+# Create and configure session directory
+RUN mkdir -p /var/lib/php/sessions && \
+    chown -R www-data:www-data /var/lib/php/sessions && \
+    chmod 1733 /var/lib/php/sessions
+
 # Set working directory
 WORKDIR /var/www/html
 
@@ -19,6 +24,9 @@ RUN chown -R www-data:www-data /var/www/html && \
 
 # Configure PHP
 COPY ./php.ini /usr/local/etc/php/
+
+# Copy custom session configuration
+COPY ./custom-session.ini /usr/local/etc/php/conf.d/
 
 # Start Apache
 CMD ["apache2-foreground"]
