--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "6034:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./pokemonstore.sql:/docker-entrypoint-initdb.d/01-pokemonstore.sql
+      - ./init-scripts:/docker-entrypoint-initdb.d
     command: --default-authentication-plugin=mysql_native_password
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_general_ci
