--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -10,17 +10,17 @@ RUN docker-php-ext-install mysqli pdo pdo_mysql
 # Enable Apache modules
 RUN a2enmod rewrite
 
-# Create and configure session directory
+# Create and configure directories
 RUN mkdir -p /var/lib/php/sessions && \
+    mkdir -p /var/www/html/logs && \
     chown -R www-data:www-data /var/lib/php/sessions && \
-    chmod 1733 /var/lib/php/sessions
+    chown -R www-data:www-data /var/www/html && \
+    chmod 1733 /var/lib/php/sessions && \
+    chmod -R 755 /var/www/html && \
+    chmod -R 777 /var/www/html/logs
 
 # Set working directory
 WORKDIR /var/www/html
-
-# Set permissions
-RUN chown -R www-data:www-data /var/www/html && \
-    chmod -R 755 /var/www/html
 
 # Configure PHP
 COPY ./php.ini /usr/local/etc/php/
